# Madalones-Defolded-Circle-3

./: .clang-tidy  .env.local.example  .gitignore  ASCII Base.md  ASCII Source.md  ASCII_Rick_base.md  ASCII_Rick_base_nodrool.md  AVATAR_PLAN.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SCREENSAVER-IMPLEMENTATION.md  SCREENSAVER-README.md  SCREENSAVER.md  STYLE_GUIDE.md  remote-ui.pro  resources_qrc_button_simulator_qmlcache.qrc  resources_qrc_keyboard_qmlcache.qrc  resources_qrc_main_qmlcache.qrc  sbom.cdx.json  test_braille.qml  test_braille_mapper.qml  test_themes.qml  version.txt
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: build.yml  test.yml  tidy.yml
_build_logs/: 2026-04-23_matrixrain_extraction.md  2026-04-23_v0.72.0-merge.md  2026-04-24_v1.4.1_osd_guards.md  2026-04-24_v1.4.6-1.4.8_bundle.md  2026-04-27_audit_v1.4.10.md  2026-04-27_v1.4.10.md
deploy/: release.json
deploy/config/: charging_screen.json
docs/: A11Y_AUDIT.md  CUSTOM_FILES.md  RELEASE_SIGNING.md  UPSTREAM_MERGE.md  release-pubkey.asc
resources/qrc/: main.qrc
resources/translations/: da_DK.ts  de_CH.ts  de_DE.ts  en_US.ts  fr_FR.ts  hu_HU.ts  it_IT.ts  nl_NL.ts
scripts/: deploy-canary.sh  mock-uc3-api.py  verify-release.sh
src/: logging.cpp  logging.h  main.cpp
src/config/: config.cpp  config.h  config_macros.h
src/core/: core.cpp  core.h
src/hardware/: activitySessionKeeper.cpp  activitySessionKeeper.h  battery.h  wifi.cpp  (+3 more)
test/: CMakeLists.txt
test/matrixrain/: CMakeLists.txt  matrixrain_test.pro  test_matrixrain.cpp
(+119 files in other folders)
